resolved filter displaying issue on safari

--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -218,7 +218,8 @@ body:has(.show-filter){
                         }
         
                     .filter_tag_wrp{  
-                        display: -webkit-inline-box;
+                        // display: -webkit-inline-box;
+                        display: flex;
                         flex-wrap: wrap;
         
                         .filter_tag{
